--- a/src/cloudscribe.SimpleContactForm/project.json
+++ b/src/cloudscribe.SimpleContactForm/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-rc20161120",
+  "version": "1.1.0-rc20161129",
   "description": "A simple contact form for ASP.NET Core",
   "authors": [ "Joe Audette" ],
   "packOptions": {
@@ -18,16 +18,16 @@
   },
 
   "dependencies": {
-    "NETStandard.Library": "1.6.0",
-    "Microsoft.Extensions.Options": "1.0.0",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.*",
-    "Microsoft.Extensions.Logging.Abstractions": "1.0.0",
-    "Microsoft.Extensions.Localization.Abstractions": "1.0.0",
-    "Microsoft.Extensions.FileProviders.Embedded": "1.0.*",
-    "Microsoft.AspNetCore.Mvc.Razor": "1.0.1",
-    "Microsoft.AspNetCore.Mvc": "1.0.*",
-    "cloudscribe.Web.Common": "1.0.0-*",
-    "cloudscribe.Messaging.Email": "1.0.0-*"
+    "NETStandard.Library": "1.6.*",
+    "Microsoft.Extensions.Options": "1.1.*",
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.*",
+    "Microsoft.Extensions.Logging.Abstractions": "1.1.*",
+    "Microsoft.Extensions.Localization.Abstractions": "1.1.*",
+    "Microsoft.Extensions.FileProviders.Embedded": "1.1.*",
+    "Microsoft.AspNetCore.Mvc.Razor": "1.1.*",
+    "Microsoft.AspNetCore.Mvc": "1.1.*",
+    "cloudscribe.Web.Common": "1.1.0*",
+    "cloudscribe.Messaging.Email": "1.1.0-*"
   },
 
   "frameworks": {
