--- a/src/WebApp/project.json
+++ b/src/WebApp/project.json
@@ -31,12 +31,15 @@
       "type": "platform"
     },
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.1.0",
-    "SaasKit.Multitenancy": "1.1.*",
-    "BundlerMinifier.Core": "2.2.306"
+    "SaasKit.Multitenancy": "1.1.*"
   },
 
   "tools": {
-   
+    "BundlerMinifier.Core": "2.2.306",
+    "Microsoft.Extensions.SecretManager.Tools": { "version": "1.1.0-preview4-final" },
+    "Microsoft.AspNetCore.Razor.Tools": { "version": "1.1.0-preview4-final" },
+    "Microsoft.AspNetCore.Server.IISIntegration.Tools": { "version": "1.1.0-preview4-final" },
+    "Microsoft.AspNetCore.Mvc.Razor.ViewCompilation.Tools": { "version": "1.1.0-preview4-final" }
   },
 
   "frameworks": {
