support invisible captcha

--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -17,7 +17,9 @@
   },
   "RecaptchaKeys": {
     "PublicKey": "",
-    "PrivateKey": ""
+    "PrivateKey": "",
+    "Invisible": true
+
   },
   "SmtpMessageProcessorOptions": {
     "NotificationTextViewName": "EmailTemplates/ContactFormTextEmail",
