--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -21,13 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="1.1.0-*" />
-    <PackageReference Include="cloudscribe.Core.Web" Version="1.1.0-*" />
-    <PackageReference Include="cloudscribe.Web.Common" Version="1.1.8" />
-    <PackageReference Include="cloudscribe.Logging.NoDb" Version="1.1.0-*" />
-    <PackageReference Include="cloudscribe.Logging.Web" Version="1.1.0-*" />
-    <PackageReference Include="cloudscribe.Web.Navigation" Version="1.1.0-*" />
-    <PackageReference Include="cloudscribe.Web.Pagination" Version="1.1.2" />
+    <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="1.1.0-rc20170401" />
+    <PackageReference Include="cloudscribe.Core.Web" Version="1.1.0-rc20170401" />
+    <PackageReference Include="cloudscribe.Web.Common" Version="1.1.9" />
+    <PackageReference Include="cloudscribe.Logging.NoDb" Version="1.1.0-rc20170401" />
+    <PackageReference Include="cloudscribe.Logging.Web" Version="1.1.0-rc20170401" />
+    <PackageReference Include="cloudscribe.Web.Navigation" Version="1.1.0-rc20170323" />
+    <PackageReference Include="cloudscribe.Web.Pagination" Version="1.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.Abstractions" Version="1.1.1" />
@@ -50,14 +50,11 @@
     <PackageReference Include="SaasKit.Multitenancy" Version="1.1.4" />
   </ItemGroup>
 
-  <Target Name="PrepublishScript" BeforeTargets="PrepareForPublish">
-    <Exec Command="bower install" />
-    <Exec Command="dotnet bundle" />
-  </Target>
+ 
 
   <ItemGroup>
     <DotNetCliToolReference Include="BundlerMinifier.Core" Version="2.2.301" />
-    <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="1.0.0" />
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
