--- a/src/cloudscribe.SimpleContactForm/cloudscribe.SimpleContactForm.csproj
+++ b/src/cloudscribe.SimpleContactForm/cloudscribe.SimpleContactForm.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <Description>A simple contact form for ASP.NET Core</Description>
-    <VersionPrefix>1.1.0-rc20161129</VersionPrefix>
+    <VersionPrefix>1.1.0</VersionPrefix>
+    <VersionSuffix>rc20170401</VersionSuffix>
     <Authors>Joe Audette</Authors>
     <TargetFramework>netstandard1.6</TargetFramework>
     <AssemblyName>cloudscribe.SimpleContactForm</AssemblyName>
@@ -30,8 +31,8 @@
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="1.1.*" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
-    <PackageReference Include="cloudscribe.Web.Common" Version="1.1.8" />
-    <PackageReference Include="cloudscribe.Messaging.Email" Version="1.1.0-*" />
+    <PackageReference Include="cloudscribe.Web.Common" Version="1.1.9" />
+    <PackageReference Include="cloudscribe.Messaging.Email" Version="1.1.0-rc20170401" />
   </ItemGroup>
 
 </Project>
