--- a/src/cloudscribe.SimpleContactForm/cloudscribe.SimpleContactForm.csproj
+++ b/src/cloudscribe.SimpleContactForm/cloudscribe.SimpleContactForm.csproj
@@ -3,9 +3,8 @@
   <PropertyGroup>
     <Description>A simple contact form for ASP.NET Core</Description>
     <VersionPrefix>1.1.0</VersionPrefix>
-    <VersionSuffix>rc20170401</VersionSuffix>
     <Authors>Joe Audette</Authors>
-    <TargetFramework>netstandard1.6</TargetFramework>
+    <TargetFrameworks>net451;net452;net46;netstandard1.6</TargetFrameworks>
     <AssemblyName>cloudscribe.SimpleContactForm</AssemblyName>
     <PackageId>cloudscribe.SimpleContactForm</PackageId>
     <PackageTags>cloudscribe;contact form</PackageTags>
@@ -18,6 +17,11 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
+  
+  <PropertyGroup>
+    <NoWarn>7035</NoWarn>
+  </PropertyGroup>
+  
 
   <ItemGroup>
     <EmbeddedResource Include="Views\**" Exclude="bin\**;obj\**;**\*.xproj;packages\**;@(EmbeddedResource)" />
@@ -32,7 +36,26 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
     <PackageReference Include="cloudscribe.Web.Common" Version="1.1.9" />
-    <PackageReference Include="cloudscribe.Messaging.Email" Version="1.1.0-rc20170401" />
+    <PackageReference Include="cloudscribe.Messaging.Email" Version="1.2.*" />
   </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
+    <Reference Include="System" />
+    <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
+    <Reference Include="System" />
+    <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
+    <Reference Include="System" />
+    <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
+  </ItemGroup>
+
 
 </Project>
