--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -6,8 +6,6 @@
     <AssemblyName>WebApp</AssemblyName>
     <OutputType>Exe</OutputType>
     <PackageId>WebApp</PackageId>
-    <RuntimeFrameworkVersion>1.1.1</RuntimeFrameworkVersion>
-    <PackageTargetFallback>$(PackageTargetFallback);dotnet5.6;portable-net45+win8</PackageTargetFallback>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,8 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="cloudscribe.Core.Web.Mvc" Version="1.0.0-*" />
-    <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="1.1.0-*" />
+    <PackageReference Include="cloudscribe.Core.Web.Mvc" Version="1.0.*" />
+    <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="1.1.*" />
     <PackageReference Include="cloudscribe.Logging.Web" Version="1.1.*" />
     <PackageReference Include="cloudscribe.Logging.NoDb" Version="1.1.*" />
     
