--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>WebApp</AssemblyName>
     <OutputType>Exe</OutputType>
@@ -19,37 +19,37 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="cloudscribe.Core.Web.Mvc" Version="1.0.*" />
-    <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="1.1.*" />
-    <PackageReference Include="cloudscribe.Logging.Web" Version="1.1.*" />
-    <PackageReference Include="cloudscribe.Logging.NoDb" Version="1.1.*" />
+    <PackageReference Include="cloudscribe.Core.Web.Mvc" Version="2.0.0-*" />
+    <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="2.0.0-*" />
+    <PackageReference Include="cloudscribe.Logging.Web" Version="2.0.0-*" />
+    <PackageReference Include="cloudscribe.Logging.NoDb" Version="2.0.0-*" />
     
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="1.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.Abstractions" Version="1.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Localization" Version="1.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Routing" Version="1.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="1.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Session" Version="1.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="1.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="1.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.*" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.*" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.Abstractions" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.AspNetCore.Localization" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0-*" />
+
   </ItemGroup>
 
  
 
   <ItemGroup>
     <DotNetCliToolReference Include="BundlerMinifier.Core" Version="2.*" />
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.*" />
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0-*" />
   </ItemGroup>
 
 </Project>
