--- a/src/cloudscribe.SimpleContactForm/cloudscribe.SimpleContactForm.csproj
+++ b/src/cloudscribe.SimpleContactForm/cloudscribe.SimpleContactForm.csproj
@@ -2,9 +2,10 @@
 
   <PropertyGroup>
     <Description>A simple contact form for ASP.NET Core</Description>
-    <VersionPrefix>1.1.3</VersionPrefix>
+    <VersionPrefix>2.0.0</VersionPrefix>
+	<VersionSuffix>preview20170725</VersionSuffix>
     <Authors>Joe Audette</Authors>
-    <TargetFrameworks>netstandard1.6</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <AssemblyName>cloudscribe.SimpleContactForm</AssemblyName>
     <PackageId>cloudscribe.SimpleContactForm</PackageId>
     <PackageTags>cloudscribe;contact form</PackageTags>
@@ -22,19 +23,19 @@
   
 
   <ItemGroup>
-    <EmbeddedResource Include="Views\**" Exclude="bin\**;obj\**;**\*.xproj;packages\**;@(EmbeddedResource)" />
+    <EmbeddedResource Include="Views\**" Exclude="bin\**;obj\**;**\*.csproj;packages\**;@(EmbeddedResource)" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options" Version="1.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="1.1.*" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="1.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="1.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.*" />
-    <PackageReference Include="cloudscribe.Web.Common" Version="1.3.*" />
-    <PackageReference Include="cloudscribe.Messaging.Email" Version="1.2.*" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="2.0.0-*" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0-*" />
+    <PackageReference Include="cloudscribe.Web.Common" Version="2.0.0-*" />
+    <PackageReference Include="cloudscribe.Messaging.Email" Version="2.0.0-*" />
   </ItemGroup>
 
   
