--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -12,14 +12,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\cloudscribe.SimpleContactForm.CoreIntegration\cloudscribe.SimpleContactForm.CoreIntegration.csproj" />
     <ProjectReference Include="..\cloudscribe.SimpleContactForm\cloudscribe.SimpleContactForm.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="cloudscribe.Core.Web.Mvc" Version="2.0.*" />
+    <PackageReference Include="cloudscribe.Core.Web.Mvc" Version="2.1.*" />
     <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="2.0.*" />
-    <PackageReference Include="cloudscribe.Logging.Web" Version="2.0.*" />
-    <PackageReference Include="cloudscribe.Logging.NoDb" Version="2.0.*" />
+    <PackageReference Include="cloudscribe.Logging.Web" Version="2.1.*" />
+    <PackageReference Include="cloudscribe.Logging.NoDb" Version="2.1.*" />
 
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.*" PrivateAssets="All" />
