--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <UserSecretsId>aspnet-WebApp20170814_2-A211B1CC-717F-4108-BF54-E3416F2370F1</UserSecretsId>
   </PropertyGroup>
 
@@ -17,23 +17,28 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="cloudscribe.Core.Web.Mvc" Version="2.1.*" />
-    <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="2.0.*" />
-    <PackageReference Include="cloudscribe.Logging.Web" Version="2.1.*" />
+    <PackageReference Include="cloudscribe.Core.Web" Version="3.0.*" />
+    <PackageReference Include="cloudscribe.Core.CompiledViews.Bootstrap3" Version="3.0.*" />
+    <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="3.0.*" />
+    <PackageReference Include="cloudscribe.Logging.Web" Version="3.0.*" />
     <PackageReference Include="cloudscribe.Logging.NoDb" Version="2.1.*" />
 
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.*" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.*" />
+    <!--
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.*" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.*" PrivateAssets="All" />
+    -->
+    
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.*"  />
 
   </ItemGroup>
 
  
-
+<!--
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.*" />
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.*" />
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.*" />
   </ItemGroup>
+  -->
 
 </Project>
