--- a/src/cloudscribe.SimpleContactForm.CoreIntegration/cloudscribe.SimpleContactForm.CoreIntegration.csproj
+++ b/src/cloudscribe.SimpleContactForm.CoreIntegration/cloudscribe.SimpleContactForm.CoreIntegration.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Description>Integration library for usingcloudscribe SimpleContactForm with cloudscribe.Core</Description>
-    <VersionPrefix>2.0.3</VersionPrefix>
-    <AssemblyVersion>2.0.3</AssemblyVersion>
+    <VersionPrefix>3.0.0</VersionPrefix>
+    <AssemblyVersion>3.0.0</AssemblyVersion>
     <Authors>Joe Audette</Authors>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageTags>cloudscribe;contact form</PackageTags>
@@ -16,7 +16,7 @@
     <ProjectReference Include="..\cloudscribe.SimpleContactForm\cloudscribe.SimpleContactForm.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="cloudscribe.Core.Models" Version="2.0.*" />
+    <PackageReference Include="cloudscribe.Core.Models" Version="3.0.*" />
   </ItemGroup>
 
 </Project>
