--- a/src/cloudscribe.SimpleContactForm/cloudscribe.SimpleContactForm.csproj
+++ b/src/cloudscribe.SimpleContactForm/cloudscribe.SimpleContactForm.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <Description>A simple contact form for ASP.NET Core</Description>
-    <VersionPrefix>3.0.0</VersionPrefix>
-    <AssemblyVersion>3.0.0</AssemblyVersion>
+    <VersionPrefix>3.0.1</VersionPrefix>
+    <AssemblyVersion>3.0.1</AssemblyVersion>
     <Authors>Joe Audette</Authors>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <PackageTags>cloudscribe;contact form</PackageTags>
@@ -17,18 +17,14 @@
   </PropertyGroup>
   
 
-  <!--<ItemGroup>
-    <EmbeddedResource Include="Views\**" Exclude="bin\**;obj\**;**\*.csproj;packages\**;@(EmbeddedResource)" />
-  </ItemGroup>-->
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.*" />
-    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="2.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="2.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.*" />
-    <PackageReference Include="cloudscribe.Web.Common" Version="3.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.0" />
+    <PackageReference Include="cloudscribe.Web.Common" Version="3.0.3" />
     <PackageReference Include="cloudscribe.Email.Senders" Version="1.0.*" />
   </ItemGroup>
 
