--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,13 @@ solution: cloudscribe.SimpleContactForm.sln
 sudo: false
 dist: trusty
 mono: none
-dotnet: 2.1.300
+dotnet: 2.1.500
 env:
   global:
     - DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
     - DOTNET_CLI_TELEMETRY_OPTOUT: 1   
 os:
   - linux
-  - osx
-osx_image: xcode8.3
 script:
-  - if test "$TRAVIS_OS_NAME" == "linux"; then dotnet restore; fi
-  - if test "$TRAVIS_OS_NAME" == "osx"; then dotnet restore --disable-parallel; fi
+  - dotnet restore
   - dotnet build -c Release
