--- a/src/cloudscribe.SimpleContactForm.CoreIntegration/cloudscribe.SimpleContactForm.CoreIntegration.csproj
+++ b/src/cloudscribe.SimpleContactForm.CoreIntegration/cloudscribe.SimpleContactForm.CoreIntegration.csproj
@@ -2,10 +2,9 @@
 
   <PropertyGroup>
     <Description>Integration library for usingcloudscribe SimpleContactForm with cloudscribe.Core</Description>
-    <VersionPrefix>3.0.3</VersionPrefix>
-    <AssemblyVersion>3.0.3</AssemblyVersion>
+    <Version>4.0.0-preview20190902</Version>
     <Authors>Joe Audette</Authors>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <PackageTags>cloudscribe;contact form</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/joeaudette/cloudscribe/master/cloudscribe-icon-32.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/joeaudette/cloudscribe.Entropy</PackageProjectUrl>
@@ -16,7 +15,7 @@
     <ProjectReference Include="..\cloudscribe.SimpleContactForm\cloudscribe.SimpleContactForm.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="cloudscribe.Core.Models" Version="3.0.*" />
+    <PackageReference Include="cloudscribe.Core.Models" Version="4.0.0-*" />
   </ItemGroup>
 
 </Project>
