--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>aspnet-WebApp20170814_2-A211B1CC-717F-4108-BF54-E3416F2370F1</UserSecretsId>
   </PropertyGroup>
 
@@ -24,11 +24,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="cloudscribe.Core.Web" Version="4.1.0" />
+    <!--<PackageReference Include="cloudscribe.Core.Web" Version="4.1.0" />
     <PackageReference Include="cloudscribe.Core.CompiledViews.Bootstrap3" Version="4.1.0" />
     <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="4.1.0" />
     <PackageReference Include="cloudscribe.Logging.Web" Version="4.1.0" />
-    <PackageReference Include="cloudscribe.Logging.NoDb" Version="4.1.0" />
+    <PackageReference Include="cloudscribe.Logging.NoDb" Version="4.1.0" />-->
+
+
+    <PackageReference Include="cloudscribe.Core.Web" Version="5.0.0" />
+    <PackageReference Include="cloudscribe.Core.CompiledViews.Bootstrap3" Version="5.0.0" />
+    <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="5.0.0" />
+    <PackageReference Include="cloudscribe.Logging.Web" Version="5.0.0" />
+    <PackageReference Include="cloudscribe.Logging.NoDb" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
