#987 stopping users entering urls into name, email, subject and message fields

--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -6,14 +6,14 @@
     "CopySubmitterEmailOnSubmission": "true"
   },
   "SmtpOptions": {
-    "Server": "",
+    "Server": "www.test.com",
     "Port": "25",
-    "User": "",
-    "Password": "",
+    "User": "test",
+    "Password": "test",
     "UseSsl": "false",
     "RequiresAuthentication": "false",
-    "DefaultEmailFromAddress": "",
-    "DefaultEmailFromAlias": ""
+    "DefaultEmailFromAddress": "test@test.com",
+    "DefaultEmailFromAlias": "test"
   },
   "RecaptchaKeys": {
     "PublicKey": "",
