--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -24,11 +24,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="cloudscribe.Core.Web" Version="8.0.0" />
-    <PackageReference Include="cloudscribe.Core.CompiledViews.Bootstrap3" Version="8.0.0" />
-    <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="8.0.0" />
-    <PackageReference Include="cloudscribe.Logging.Web" Version="8.0.0" />
-    <PackageReference Include="cloudscribe.Logging.NoDb" Version="8.0.0" />
+    <PackageReference Include="cloudscribe.Core.Web" Version="8.1.0" />
+    <PackageReference Include="cloudscribe.Core.CompiledViews.Bootstrap3" Version="8.1.0" />
+    <PackageReference Include="cloudscribe.Core.Storage.NoDb" Version="8.1.0" />
+    <PackageReference Include="cloudscribe.Logging.Web" Version="8.1.0" />
+    <PackageReference Include="cloudscribe.Logging.NoDb" Version="8.1.0" />
   </ItemGroup>
 
 </Project>
