--- a/src/cloudscribe.SimpleContactForm/cloudscribe.SimpleContactForm.csproj
+++ b/src/cloudscribe.SimpleContactForm/cloudscribe.SimpleContactForm.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>A simple contact form for ASP.NET Core</Description>
-    <Version>8.3.0</Version>
+    <Version>8.4.0</Version>
     <TargetFramework>net8.0</TargetFramework>
     <Authors>Joe Audette</Authors>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
@@ -10,10 +10,12 @@
     <PackageIcon>icon.png</PackageIcon>
     <PackageProjectUrl>https://github.com/cloudscribe/cloudscribe.SimpleContactForm</PackageProjectUrl>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="icon.png" Pack="true" PackagePath="\" />
+    <None Include="README.md" Pack="true" PackagePath="" />
   </ItemGroup>
   
   <PropertyGroup>
@@ -36,8 +38,8 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.0" />
-    <PackageReference Include="cloudscribe.Web.Common" Version="8.3.0" />
-    <PackageReference Include="cloudscribe.Email.Senders" Version="8.3.0" />
+    <PackageReference Include="cloudscribe.Web.Common" Version="8.4.0" />
+    <PackageReference Include="cloudscribe.Email.Senders" Version="8.4.0" />
   </ItemGroup>
 
 </Project>
